Fix up footer spacing

--- a/scss/_patterns_footer.scss
+++ b/scss/_patterns_footer.scss
@@ -6,10 +6,11 @@
     border-top: 1px solid $color-mid-light;
     font-size: .875rem;
     line-height: 1.5;
-    margin-bottom: $sp-medium;
+    padding-bottom: $sp-medium;
     padding-top: $sp-medium;
 
     @media (min-width: $breakpoint-medium) {
+      padding-bottom: $sp-large;
       padding-top: $sp-large;
     }
 
@@ -19,11 +20,11 @@
 
     &__links {
       margin: 0;
-      padding: $sp-small 0 $sp-medium;
+      padding: $sp-small 0 0;
 
       @media (min-width: $breakpoint-medium) {
         margin-top: 0;
-        padding: $sp-medium 0 $sp-large;
+        padding-top: $sp-medium;
       }
     }
 
